<resources>
    <string name="app_name">Original</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_qr">QR</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>