<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/baseline_qr_code_scanner_24"
        android:title="@string/title_qr" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/baseline_location_on_24"
        android:title="@string/title_map" />

</menu>