...
        android:maxWidth="250dp"
        android:maxHeight="75dp"
        android:padding="20dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText_qr_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qr_result_text"
        android:autofillHints=""
        android:ems="10"
        android:hint="Add Personal Comment"
...
        android:drawableStart="@drawable/baseline_location_on_24"
        android:padding="10dp"
        android:text="Location"
        />

    <Button
        android:id="@+id/save_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="60dp"
...
