<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="Profile Photo of User"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:hint="Player Name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_qr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="TOTAL QRS"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/qr_count_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/total_qr_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:hint="10"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <!-- Vertical divider -->
    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_above="@id/leaderboard_button"
        android:layout_below="@id/player_name"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/point_qr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:text="TOTAL Points"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_points_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/point_qr_text"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:hint="10"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/highest_qr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/qr_count_int"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="Highest QR Score"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/highest_qr_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/highest_qr_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:hint="Example"
        android:maxWidth="100dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/lowest_qr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/total_points_int"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="Lowest QR Score"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/lowest_qr_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lowest_qr_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:hint="Example"
        android:maxWidth="100dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/leaderboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/highest_qr_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:drawableStart="@drawable/ranking"
        android:drawablePadding="15dp"
        android:focusable="true"
        android:text="Leaderboard"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/myQr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaderboard_button"
        android:layout_alignStart="@+id/leaderboard_button"
        android:layout_alignEnd="@+id/leaderboard_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:drawablePadding="15dp"
        android:focusable="true"
        android:text="My QRs"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black" />

</RelativeLayout>